# I2A2_agentes_autonomos_DataScience

./: .dockerignore  .gitignore  DEPLOY_GUIDE.md  DOCUMENTO_PROJETO.md  INSTRUCOES_ENTREGA.md  MELHORIAS_IMPLEMENTADAS.md  README.md  README_MEMORIA.md  README_prinicipal.md  docker-compose.yml  dockerfile  main.py  packages.txt  pyproject.toml  relatorio.tex  requirements.txt  requirements_fixed.txt  test_memoria.py
chroma_store/: chroma.sqlite3
src/: agent.py  app.py  langgraph_flow.json  langsmith_setup.py  memory_store.py  tools.py  tools_refactored.py  utils.py
