[project]
name = "agentes-engenheiro-dados"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13.1"
dependencies = [
    "chromadb>=0.4.22",
    "faiss-cpu>=1.7.4",
    "langchain>=0.1.0",
    "langchain-community>=0.0.20",
    "langchain-core>=0.1.20",
    "langchain-google-genai>=0.0.6",
    "langchain-ollama>=0.0.1",
    "langchain-openai>=0.3.35",
    "langgraph>=0.0.20",
    "langsmith>=0.0.83",
    "matplotlib>=3.8.0",
    "numpy>=1.26.0,<2.0.0",
    "openai>=1.12.0",
    "pandas>=2.2.0",
    "python-dateutil>=2.9.0.post0",
    "python-dotenv>=1.0.0",
    "scikit-learn>=1.4.0",
    "seaborn>=0.13.0",
    "streamlit>=1.31.0",
]
